--- a/.tools/docker/docker-compose.yml
+++ b/.tools/docker/docker-compose.yml
@@ -17,7 +17,6 @@ services:
       - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
     networks:
       - shop-app-network
     healthcheck:
@@ -57,14 +56,18 @@ services:
     volumes:
       - ../../backend:/var/www/html
       - backend_vendor:/var/www/html/vendor
-      - backend_storage:/var/www/html/storage
-      - ./backend-entrypoint.sh:/usr/local/bin/entrypoint.sh
+      - ./backend-entrypoint.sh:/tmp/entrypoint-win.sh:ro
     depends_on:
       mysql:
         condition: service_healthy
     networks:
       - shop-app-network
-    command: ["/usr/local/bin/entrypoint.sh"]
+    entrypoint: ["/bin/bash", "-c"]
+    command:
+      - |
+        sed 's/\r$$//' /tmp/entrypoint-win.sh > /usr/local/bin/entrypoint.sh
+        chmod +x /usr/local/bin/entrypoint.sh
+        exec /usr/local/bin/entrypoint.sh
 
   # Frontend - Vue Vite
   frontend:
@@ -115,8 +118,6 @@ volumes:
   mysql_data:
     driver: local
   backend_vendor:
-    driver: local
-  backend_storage:
     driver: local
   frontend_node_modules:
     driver: local
